[package]
name = "tanks_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket-server = { git = "https://github.com/ndbaker1/websocket-server", rev = "2443d6c" }
tanks_core = { path = "../tanks_core" }

log = "0.4"
env_logger = "0.8.4"

tokio = { version = "0.2", features = ["macros", "sync", "time"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
futures = { version = "0.3", default-features = false }
nanoid = "0.4.0"
nanorand = "0.6.1"
derive_builder = "0.10.2"
urlencoding = "2.1.0"
lazy_static = "1.4.0"
