[package]
name = "tanks_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanks_core = { path = "../tanks_core" }
tanks_events = { path = "../tanks_events" }

axum = { version = "0.5.17", features = ["ws"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

tokio = { version = "1.0", features = ["macros", "sync", "time", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

futures = { version = "0.3", default-features = false }

nanoid = "0.4.0"
nanorand = "0.6.1"
derive_builder = "0.10.2"
urlencoding = "2.1.0"
lazy_static = "1.4.0"
dashmap = "5.4.0"
tower = "0.4.13"
