[package]
name = "tanks_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tanks_core = { path = "../tanks_core" }

regex = "1"
js-sys = "0.3.55"
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.75"

[dependencies.serde]
version = "1.0.133"
features = ['derive']

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Response',
  'BinaryType',
  'MessageEvent',
  'Blob',
  'ProgressEvent',
  'FileReader',
  'WebSocket',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'Node',
  'Window',
  "Location",
]
